# ClientCare

./: .coveragerc  .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DESCRIPCION_BOT  LICENSE  README.md  SECURITY.md  lanzar_bot.bat  payload.json  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: dependabot.yml
.github/workflows/: ci.yml
ci/: pipeline.yml
config/: rules.yaml
data/: conversations.json
docs/: architecture.md  deployment.md  estructura.md  faq.md  faq_config.md  rules_reference.md  webchat_api.md  whatsapp_ngrok_setup.md  whatsapp_setup.md  windows_guide.md
docs/sql/: README.md  erd.mmd  schema.sql
examples/: sample_env_vars.md  sample_messages.json
infra/docker/: Dockerfile
scripts/: debug_whatsapp_flow.py  generate_tree.py  nlu_info.py  simulate_whatsapp_connector.py  smoke_faq_bot.py  smoke_nlu.py  test_faq_match.py  train_nlu.py
src/app/: config.py  server.py
src/bot_core/: manager.py
src/config/: rules_loader.py
src/connectors/: telegram_polling.py  webchat_router.py  whatsapp_router.py
src/handlers/: escalation.py  faq.py  greeting.py  ticket.py
src/nlu/: classifier.py
src/storage/: conversation_repository.py  repository.py  state_repository.py
src/utils/: duration.py  rate_limiter.py
tests/: conftest.py
tests/unit/: test_bot_capabilities.py  test_conversation_repository.py  test_duration_parser.py  test_generate_tree.py  test_inactivity_flow.py  test_manager.py  test_memory_resume.py  test_nlu_advanced.py  test_repository.py
